# tex2mdx

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: conversion-container-pytest.yml
SubmitReverseProxy/: Dockerfile  entry_point.py
SubmitReverseProxy/dockerfiles/: Dockerfile.dev  Dockerfile.prod
cicd/: cloudbuild-develop-pr-srp.yaml  cloudbuild-develop-pr.yaml  cloudbuild-master-pr-srp.yaml  cloudbuild-master-pr.yaml
conversion-container/: .gitignore  Dockerfile  entry_point.py  pyproject.toml  wrapper.sh
conversion-container/conversion/: config.py  exceptions.py  factory.py  locking.py
conversion-container/conversion/domain/: conversion.py
conversion-container/conversion/formatting/: __init__.py
conversion-container/conversion/processes/convert/: __init__.py
conversion-container/conversion/processes/publish/: __init__.py  fastly_purge.py  util.py
conversion-container/conversion/routes/: __init__.py  flask_thread.py
conversion-container/conversion/services/db/: __init__.py  util.py
conversion-container/conversion/services/files/: __init__.py  file_manager.py  main_src.py
conversion-container/conversion/services/latexml/: __init__.py  metadata.py
conversion-container/dockerfiles/: Dockerfile.ar5ivist_base  Dockerfile.main  Dockerfile.main_dev  Dockerfile.main_prod
conversion-container/tests/: conftest.py  test_call_latexml.py  test_log_parser.py  test_submission_payload.py  test_typings.py  test_write_failure.py
convert-scheduler/: README.md  config.py  get_avg.py  get_mean_time.py  main.py  pyproject.toml  times.csv  times_16workers.csv  times_16workers_8threads.csv  times_24workers_24cpus.csv  workers_schedules.json
scripts/: setup.ps1
src/tex2html/: embedding.py  latexml.py  log_handling.py  main.py  postprocess.py  preprocess.py  preprocess_tex.py
src/tex2html/assets/: cleanup.css  my_css.css
src/tex2html/assets/bindings/: fontawesome5.sty.ltxml
src/tex2html/assets/css/: arxiv-html-papers-20260131.css  my_css.css
src/tex2html/assets/js/: my_js.js
src/tex2mdx/: export.py  format_logs.py  html.py  latexml.py  logging.py  main.py  mdx.py  tex.py
src/tex2mdx/assets/: cleanup.css  tagging.sty.ltxml  trfsigns.sty.ltxml
test/: combined.tex  tcolorbox.sty.ltxml  test.tex  titlepage.tex
test/chapters/: 01_einleitung.tex  02_signalabtastung_und_rekonstruktion.tex  03_texorpdfstring_zeitdiskrete_signale.tex  04_zeitdiskrete_systeme_im_zeitbereich.tex  05_z_transformation_von_signalen.tex  06_zeitdiskrete_systeme_im_z_bereich.tex  07_spektrum_von_signalfolgen.tex  09_frequenzgang_zeitdiskreter_systeme.tex  10_entwurf_zeitdiskreter_systeme.tex  12_diskrete_fourier_transformation.tex
test/html/: LaTeXML.cache  __stdout.txt  combined.html
test/output/html/: Ch1.html  Ch2.html  Ch3.html  combined.html
test/output/mdx/: Ch1.mdx  Ch2.mdx  Ch3.mdx
test/output/media/: 3_24_folgen_zur_beschreibung_von_ein.wmf
