[project]
name = "tex2mdx"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "typer>=0.25.1",
]

[project.scripts]
tex2mdx = "tex2mdx.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { tex2mdx = ["assets/**/*"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
