[tool.poetry]
name = "conversion"
version = "1.1.0"
description = "This container runs in cloud run and handles conversion requests and submission publication events"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = { git = "https://github.com/arXiv/arxiv-base.git", rev = "6b4e41363387d884a34a04fd40a4a07538677f8a" }

gunicorn = "^20.1.0"
bs4 = "^0.0.1"
filelock = "^3.12.2"
requests = "^2.31.0"
tenacity = "*"
sqlalchemy = "~=2.0.27"
mypy = "*"
mysqlclient = "==2.1.*"
pg8000 = "^1.30.1"
types-pytz = "*"
tex-inspection = { git = "https://github.com/arXiv/submission-tools", branch = "master", subdirectory = "tex_inspection" }

[tool.poetry.dev-dependencies]
pytest-mock = "*"

[tool.pytest.ini_options]
markers = [
  "cc_unit_tests: Unit tests for concurrency control functions",
  "processing_unit_tests: Unit tests for processing functions",
  "logparser_unit_tests: Unit tests for log parser functions",
]
filterwarnings = ["ignore:.*google\\._upb\\._message\\..*:DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
