[tool.poetry]
name = "conversion"
version = "1.1.0"
description = "This container runs in cloud run and handles conversion requests and submission publication events"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = { git = "https://github.com/arXiv/arxiv-base.git", rev = "6b4e41363387d884a34a04fd40a4a07538677f8a" }

gunicorn = "^20.1.0"
bs4 = "^0.0.1"
filelock = "^3.12.2"
requests = "^2.31.0"
types-requests = "^2.31"
tenacity = "*"
sqlalchemy = "~=2.0.27"
mypy = "*"
mysqlclient = "==2.1.*"
pg8000 = "^1.30.1"
types-pytz = "*"
tex-inspection = { git = "https://github.com/arXiv/submission-tools", branch = "master", subdirectory = "tex_inspection" }

[tool.poetry.group.dev.dependencies]
pytest-mock = "*"

[tool.pytest.ini_options]
markers = [
  # "cc_unit_tests: Unit tests for concurrency control functions",
  # "processing_unit_tests: Unit tests for processing functions",
  "logparser_unit_tests: Unit tests for log parser functions",
  "filestore_unit_tests: Unit tests for filestore operations",
  "call_latexml_tests: Tests the stability of latexml calls",
]
filterwarnings = ["ignore:.*google\\._upb\\._message\\..*:DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

lint.select = [
  "F", # Pyflakes
  "D", # pydocstyle
  "E", # pycodestyle errors
  # "W", # pycodestyle warnings
  # "C90", # McCabe
  "I",   # isort
  "UP",  # pyupgrade
  "PLC",
  "PLE",
  "PLW", # Pylint
  # "PLR", # Pylint refactoring
  "PD",  # pandas checks
  "NPY", # numpy checks
  "RUF", # ruff internal check
]
lint.ignore = [
  "D100", # missing docstring in public module
  "D101", # missing docstring in public class
  "D102", # missing docstring in public method
  "D103", # missing docstring in public function
  "D104", # missing docstring in public package
  "D105", # no docstring in magic method like __str__
  "D107", # no docstring in __init__
]

output-format = "grouped"

# Assume Python 3.11
# Note: helps prevent breaking autofixes from, e.g., pyupgrade
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "pep257"
