[tool.poetry]
name = "convert-scheduler"
version = "1.0.0"
description = "This container runs in a VM and converts the entire arXiv corpus to HTML"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "724b0edcd5ff0a242249e0ae5cac1ef26ab3476e"}
mysqlclient = "==2.1.*"
pg8000 = "^1.30.1"
asyncio = "*"
aiohttp = "*"
